@startuml tanks
interface Collidable {
    + move()
    + getRectangle()
}
interface Controllable {
  enum DIRECTIONS up,down,left,right,udle
  + registerInput()
}
interface Animated {
    enum ANIMATION every animation type,
    + getActiveAnimation()
}

abstract class AbstractEntity implements Collidable {
    - collidables : ArrayList
    - elapsedtime : float
    - currentActiveAnimation : Animation
    - upAnim : Animation
    - rightAnim : Animation
    - leftAnim : Animation
    - downAnim : Animation

    + draw()
    - update()
    - collision()
    # move()
    - createAnimation() 
}
class AnimationHandler {
    - Animated animations
    + getActiveAnimation(Entity : AbstractEntity, animations : Animated)
}
class CollisionDetector {
    - map : Map
    + detectCollisions(collidable: Collidable)
}

class Player implements Collidable {
    + move()
}
class Player1Controller implements Controllable{
    + registerInput()
}
class Player2Controller implements Controllable{
    + registerInput()
}
class PlayerAnimations {
    
}

class Map {
    - tiledMap : TiledMap
    - layer : TiledMapTileLayer
    - tileWidht : int
    - tileHeight : int
    - mapWidth : int
    - mapHeight : int
    - bounds : Rectanle

    + getCollidableRectangles() : ArrayList
}

class Tanks {
    - batch : SpriteBatch
    - img : Sprite
    - players : ArrayList<Player>

    - tiledMapRenderer : TileMapRenderer
    - camera : OrthographicCamera
    - map : Map
    - collisionDetector : CollisionDetector

    + create()
    + render()

    + update()
    + detectCollisions()
    + checkPlayerCollision()
    + detectCollisions()

    + dispose()

}

Tanks --> Map
Tanks --> CollisionDetector
Tanks --> Player

CollisionDetector --> Map
CollisionDetector --> Collidable

Player --|> AbstractEntity
Player --> Controllable : assigns a controller on creation
Player --> PlayerAnimations

AbstractEntity --|> Animated

@enduml
